WIP: Implemented most of the dashboard

--- a/src/assets/tabler/scss/dashboard/dashboard.scss
+++ b/src/assets/tabler/scss/dashboard/dashboard.scss
@@ -63,3 +63,6 @@
 @import 'selectize';
 
 @import 'fonts/feather';
+
+$fa-font-path: "~font-awesome/fonts";
+@import "~font-awesome/scss/font-awesome.scss";
