Add Simple Line Icons

--- a/src/assets/tabler/scss/dashboard/dashboard.scss
+++ b/src/assets/tabler/scss/dashboard/dashboard.scss
@@ -66,3 +66,6 @@
 
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome.scss";
+
+$simple-line-font-path: "~simple-line-icons/fonts/";
+@import "~simple-line-icons/scss/simple-line-icons.scss";
