Add apidocs module

--- a/libs/styles/src/scss/tabler.scss
+++ b/libs/styles/src/scss/tabler.scss
@@ -24,3 +24,6 @@ $fa-font-path: "~font-awesome/fonts";
 // Simple Line Icons from NPM
 $simple-line-font-path: "~simple-line-icons/fonts/";
 @import "~simple-line-icons/scss/simple-line-icons.scss";
+
+// Import app font
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,500,500i,600,600i,700,700i&amp;subset=latin-ext");
