feat(fire): prevent posting empty messages

--- a/apps/fire/src/styles.scss
+++ b/apps/fire/src/styles.scss
@@ -1,3 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 $tabler-base: "../../../libs/angular-styles/src" !default;
 @import "../../../libs/angular-styles/index.scss";
+.fe {
+  display: inline-block;
+}
