--- a/apps/docs/src/styles.scss
+++ b/apps/docs/src/styles.scss
@@ -1,3 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 $tabler-base: "../../../libs/angular-styles/src" !default;
 @import "../../../libs/angular-styles/index.scss";
+
+@import '~prismjs/themes/prism.css';
