--- a/libs/angular-styles/src/lib/scss/dashboard/_browser.scss
+++ b/libs/angular-styles/src/lib/scss/dashboard/_browser.scss
@@ -1,4 +1,4 @@
-$browsers-path: '#{$tabler-base}/images/browsers/' !default;
+$browsers-path: '#{$tabler-base}/lib/images/browsers/' !default;
 $browsers: (
 	'android-browser', 'aol-explorer', 'blackberry', 'camino', 'chrome', 'chromium', 'dolphin', 'edge',
 	'firefox', 'ie', 'maxthon', 'mozilla', 'netscape', 'opera', 'safari', 'sleipnir', 'uc-browser', 'vivaldi'
