--- a/libs/angular-styles/src/lib/scss/dashboard/_flag.scss
+++ b/libs/angular-styles/src/lib/scss/dashboard/_flag.scss
@@ -1,4 +1,4 @@
-$flags-path: '#{$tabler-base}/images/flags/' !default;
+$flags-path: '#{$tabler-base}/lib/images/flags/' !default;
 
 .flag {
 	width: (1.2rem*640/480);
