--- a/libs/angular-styles/src/lib/scss/dashboard/fonts/_feather.scss
+++ b/libs/angular-styles/src/lib/scss/dashboard/fonts/_feather.scss
@@ -1,4 +1,4 @@
-$feather-font-path: '#{$tabler-base}/fonts/feather' !default;
+$feather-font-path: '#{$tabler-base}/lib/fonts/feather' !default;
 
 @font-face {
 	font-family: "feather";
